# 04_local_server

./: CMakeLists.txt  library.json
include/04_local_server/: ILocalServerChannel.h  LocalServer.h  LocalServerChannel.h
include/local_server/: LocalServerThread.h
internal/00-public/: 01-LocalServerThread.h
internal/01-interface/: 01-ILocalServerChannel.h
internal/02-variant/: 01-LocalServerChannel.h  LocalServerChannel.h
internal/03-thread/: 01-LocalServerThread.h
